# django-stagers

./: .gitignore  README.md  deploy.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
config/: settings.py
src/django_stagers/: __init__.py  stager.py  stagers.py
testmodels/: models.py  stagers.py  tests.py
testmodels/management/commands/: generate_requirements.py
testmodels/migrations/: 0001_initial.py  0002_foo_normal_bars_specialfoobar_foo_special_bars.py
