[project]
name = "django-stagers"
version = "0.0.3"
authors = [
  { name="Matthew Coleman", email="19colemanm@gmail.com" },
]
description = "This package adds stagers to assist in bulk operations on django models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=4.2.30",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "django>=4.0.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[dependency-groups]
dev = [
    "django-extensions>=3.2.3",
    "django-stubs>=5.1.3",
    "faker>=35.2.2",
    "ipdb>=0.13.13",
    "ipython>=8.12.3",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "rich>=14.3.4",
]
